--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "image-minimizer-webpack-plugin": "^4.1.0",
     "imagemin": "^9.0.0",
     "imagemin-mozjpeg": "^10.0.0",
